# code-quality

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: code-quality.yml  release.yml
codequality/: __main__.py  ai_report.py  annotation_coverage.py  api_diff.py  arch_conformance.py  baseline.py  churn.py  cli.py  commit_lint.py  complexity_coverage_risk.py  complexity_regression_diff.py  complexity_trend.py  config.py  config_drift.py  config_validate.py  conventions.py  coverage_check.py  dead_code_confidence.py  dependency_check.py  dependency_risk.py  edit_distance.py  env_check.py  feature_flags.py  fixer.py  flakiness.py  generated_code.py  git_utils.py  hallucination_metrics.py  history.py  history_secrets.py  hotspots.py  large_files.py  llm_judge.py  migration_check.py  mutation.py  orphaned_config.py  ownership.py  pipeline.py  project_init.py  property_scaffold.py  (+9 more)
codequality/analyzers/: async_await.py  base.py  circular_imports.py  complexity_regression.py  db_query_in_loop.py  dead_code.py  deprecated_api.py  doc_examples.py  duplication.py  generic_analyzer.py  internal_refs.py  naive_datetime.py  placeholder_code.py  python_analyzer.py  python_correctness_extra.py  python_docstring_drift.py  python_idioms.py  python_import_order.py  python_loop_perf.py  python_security.py  python_test_quality.py  python_token_checks.py  python_unreachable.py  redos.py  resource_lifecycle.py  scope_check.py  secrets.py  signature_diff.py  stdlib_attrs.py  treesitter_analyzer.py  (+1 more)
docs/: subcommands.md
examples/: demo_change.py
scripts/: grade_github_repos.py
tests/: test_ai_report.py  test_annotation_coverage.py  test_api_diff.py  test_arch_conformance.py  test_badge_report.py  test_baseline.py  test_category_trend.py  test_churn.py  test_circular_imports.py  test_cli_integration.py  test_commit_lint.py  test_complexity_coverage_risk.py  test_complexity_regression.py  test_complexity_regression_diff.py  test_complexity_trend.py  test_config_drift.py  test_config_validate.py  test_conventions.py  test_correctness_extra.py  test_coverage_check.py  test_dead_code.py  test_dead_code_confidence.py  test_dependency_check.py  test_dependency_risk.py  test_deprecated_api.py  test_diff.py  test_doc_examples.py  test_edit_distance.py  test_env_check.py  test_fail_on.py  test_feature_flags.py  test_fixer.py  test_flakiness.py  test_fstring_log.py  test_generated_code.py  test_git_utils.py  test_gitlab_report.py  test_hallucination_metrics.py  test_history.py  test_history_secrets.py  (+34 more)
(+2 files in other folders)
