[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codequality"
version = "0.1.0"
description = "Deterministic, programmatic code quality scanner for CI pipelines and local use."
requires-python = ">=3.9"
readme = "README.md"

[project.scripts]
codequality = "codequality.cli:main"

[tool.setuptools]
packages = ["codequality", "codequality.analyzers"]

[tool.codequality]
# Self-scan config for this repo.
[tool.codequality.thresholds]
fail_under = 60
