[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codequality"
version = "0.5.0"
description = "Deterministic, programmatic code quality scanner for CI pipelines and local use."
requires-python = ">=3.9"
readme = "README.md"

[project.optional-dependencies]
treesitter = ["tree-sitter-language-pack>=1.0.0"]
types = ["mypy>=1.0"]
coverage = ["coverage>=7.0"]
mutation = ["mutmut>=3.0"]
llm = ["anthropic>=0.40"]

[project.scripts]
codequality = "codequality.cli:main"

[tool.setuptools]
packages = ["codequality", "codequality.analyzers"]

[tool.codequality]
# Self-scan config for this repo.
[tool.codequality.thresholds]
fail_under = 60
