[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codequality"
version = "0.5.0"
description = "Deterministic, programmatic code quality scanner for CI pipelines and local use."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hiemenz" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Hiemenz/code-quality"
Repository = "https://github.com/Hiemenz/code-quality"

[project.optional-dependencies]
treesitter = ["tree-sitter-language-pack>=1.0.0"]
types = ["mypy>=1.0"]
coverage = ["coverage>=7.0"]
mutation = ["mutmut>=3.0"]

[project.scripts]
codequality = "codequality.cli:main"

[tool.setuptools]
packages = ["codequality", "codequality.analyzers"]

[tool.codequality]
# Self-scan config for this repo.
exclude = ["tests/fixtures/*"]  # intentionally messy files used as test inputs

[tool.codequality.thresholds]
fail_under = 60
